feature:integrando banco de dados

--- a/LojaVirtual/LojaVirtual/Views/Home/Index.cshtml
+++ b/LojaVirtual/LojaVirtual/Views/Home/Index.cshtml
@@ -1,3 +1,4 @@
+@model LojaVirtual.Models.NewsletterEmail
 <main role="main">
 
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -158,3 +159,52 @@
     </div>
 
 </main>
+@{
+            /*
+            Razor - Motor template do ASP.NET
+            Html Helper - Interface que proporciona gerar código html por meio do C#
+
+            Primeiro form
+            @using (Html.BeginForm("index", "home", FormMethod.Post))
+            */
+}
+
+@using (Html.BeginForm(null, null, null, FormMethod.Post, false, new
+{
+    @action =
+@Url.Action("index", "home") + "#formulario"
+}))
+
+{
+
+    <div class="container" id="formulario">
+        <div class="row">
+            <div class="col-sm-6 offset-sm-2">
+                @if (TempData["MSG_S"] != null)
+                {
+                    <p class="alert alert-success">@TempData["MSG_S"]</p>
+                }
+            </div>
+            <div class="col-sm-6 offset-sm-2">
+                <div class="form-group">
+                    <label for="nome">Cadastre seu Email para receber promoções</label>
+                    <div class="input-group">
+
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fa fa-envelope"></i></span>
+                        </div>
+                        @Html.EditorFor(m => m.Email, new {htmlAttributes = new {@class="form-control"}})
+                        @* <input type="text" id="nome" class="form-control" name="nome" placeholder="" required=""
+                            value=""> *@
+                    </div>
+                    <span style="color:red;">@Html.ValidationMessageFor(m=>m.Email)</span>
+                </div>
+            </div>
+            <div class="col-sm-2">
+                <button class="subscribe btn btn-primary btn-block" type="submit"> Enviar </button>
+            </div>
+
+        </div>
+    </div>
+
+}
