--- a/LojaVirtual/LojaVirtual/Views/Home/CadastroCliente.cshtml
+++ b/LojaVirtual/LojaVirtual/Views/Home/CadastroCliente.cshtml
@@ -1,78 +1,85 @@
-<main role="main">
+@model Cliente
 
-    <section class="container" style="margin-top: 50px">
-        <div class="row">
-            <aside class="col-sm-6">
-                <h3 class="subtitle-doc"># Register simple
-                    <a href="#" data-html="code_register_1" class="showcode">[code]</a>
-                </h3>
-                <div id="code_register_1">
-                    <div class="card">
-                        <header class="card-header">
-                            <a href="" class="float-right btn btn-outline-primary mt-1">Log in</a>
-                            <h4 class="card-title mt-2">Sign up</h4>
-                        </header>
-                        <article class="card-body">
-                            <form>
+<form asp-action="CadastroCliente" asp-controller="Home" method="post">
+    <main role="main">
+
+        <section class="container" style="margin-top: 50px">
+            <div class="row">
+                <aside class="col-sm-6">
+                    <h3 class="subtitle-doc">Cadastro de Cliente
+                    </h3>
+                    <div id="code_register_1">
+                        <div class="card">
+                            <header class="card-header">
+                                <a asp-controller="Home" asp-action="Login"
+                                    class="float-right btn btn-outline-primary mt-1">Entrar</a>
+                                <h4 class="card-title mt-2">Cadastre-se</h4>
+                            </header>
+                            <article class="card-body">
+                                @if (TempData["MSG_S"] != null)
+                                {
+                                    <p class="alert alert-success">@TempData["MSG_S"]</p>
+                                }
                                 <div class="form-row">
                                     <div class="col form-group">
-                                        <label>First name</label>
-                                        <input type="text" class="form-control" placeholder="">
-                                    </div> <!-- form-group end.// -->
+                                        <label>Nome</label>
+                                        <input type="text" asp-for="Nome" class="form-control" placeholder="">
+                                        <span asp-validation-for="Nome"></span>
+                                    </div>
                                     <div class="col form-group">
-                                        <label>Last name</label>
-                                        <input type="text" class="form-control" placeholder="">
-                                    </div> <!-- form-group end.// -->
-                                </div> <!-- form-row end.// -->
+                                        <label>Nascimento</label>
+                                        <input type="text" asp-for="Nascimento" class="form-control" placeholder="">
+                                        <span asp-validation-for="Nascimento"></span>
+                                    </div>
+                                </div>
                                 <div class="form-group">
-                                    <label>Email address</label>
-                                    <input type="email" class="form-control" placeholder="">
+                                    <label class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" asp-for="Sexo" value="M">
+                                        <span class="form-check-label"> Masculino </span>
+                                    </label>
+                                    <label class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" asp-for="Sexo" value="F">
+                                        <span class="form-check-label"> Feminino</span>
+                                    </label>
+                                    <span asp-validation-for="Sexo"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label>Telefone</label>
+                                    <input type="text" asp-for="Telefone" class="form-control" placeholder="">
+                                    <span asp-validation-for="Telefone"></span>
+                                </div>
+
+                                <div class="form-group">
+                                    <label>CPF</label>
+                                    <input type="text" asp-for="CPF" class="form-control" placeholder="">
+                                    <span asp-validation-for="CPF"></span>
+                                </div>
+
+                                <div class="form-group">
+                                    <label>Email</label>
+                                    <input type="email" asp-for="Email" class="form-control" placeholder="">
                                     <small class="form-text text-muted">We'll never share your email with anyone
                                         else.</small>
-                                </div> <!-- form-group end.// -->
+                                    <span asp-validation-for="Email"></span>
+                                </div>
                                 <div class="form-group">
-                                    <label class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="gender" value="option1">
-                                        <span class="form-check-label"> Male </span>
-                                    </label>
-                                    <label class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="gender" value="option2">
-                                        <span class="form-check-label"> Female</span>
-                                    </label>
-                                </div> <!-- form-group end.// -->
-                                <div class="form-row">
-                                    <div class="form-group col-md-6">
-                                        <label>City</label>
-                                        <input type="text" class="form-control">
-                                    </div> <!-- form-group end.// -->
-                                    <div class="form-group col-md-6">
-                                        <label>Country</label>
-                                        <select id="inputState" class="form-control">
-                                            <option> Choose...</option>
-                                            <option>Uzbekistan</option>
-                                            <option>Russia</option>
-                                            <option selected="">United States</option>
-                                            <option>India</option>
-                                            <option>Afganistan</option>
-                                        </select>
-                                    </div> <!-- form-group end.// -->
-                                </div> <!-- form-row.// -->
+                                    <label>Senha</label>
+                                    <input class="form-control" asp-for="Senha" type="password">
+                                    <span asp-validation-for="Senha"></span>
+                                </div>
                                 <div class="form-group">
-                                    <label>Create password</label>
-                                    <input class="form-control" type="password">
-                                </div> <!-- form-group end.// -->
-                                <div class="form-group">
-                                    <button type="submit" class="btn btn-primary btn-block"> Register </button>
-                                </div> <!-- form-group// -->
-                                <small class="text-muted">By clicking the 'Sign Up' button, you confirm that you
-                                    accept our <br> Terms of use and Privacy Policy.</small>
-                            </form>
-                        </article> <!-- card-body end .// -->
-                        <div class="border-top card-body text-center">Have an account? <a href="">Log In</a></div>
-                    </div> <!-- card.// -->
+                                    <button type="submit" class="btn btn-primary btn-block"> Cadastrar </button>
+                                </div>
 
-                </div> <!-- code-wrap.// -->
-            </aside>
-        </div>
-    </section>
-</main>
+                            </article>
+                            <div class="border-top card-body text-center">Já tem uma conta? <a asp-action="Login"
+                                    asp-controller="Home">Entre</a>
+                            </div>
+                        </div>
+
+                    </div>
+                </aside>
+            </div>
+        </section>
+    </main>
+</form>
